# modelagem-geometrica

./: .gitignore  Block.cpp  Block.hpp  Box.cpp  Box.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  GLWidget.cpp  GLWidget.hpp  MainWidget.cpp  MainWidget.hpp  Mesh.cpp  Mesh.hpp  Node.cpp  Node.hpp  OctTree.cpp  OctTree.hpp  OptionsWidget.cpp  OptionsWidget.hpp  Scene.hpp  Solid.hpp  Sphere.cpp  Sphere.hpp  TestSolid.cpp  TestSolid.hpp  Triangle.cpp  Triangle.hpp  Viewport.hpp  main.cpp  resources.qrc  testGL.cpp  testGL.hpp  testTriangle.cpp  testTriangle.hpp  vec3.hpp
docs/:  notes.txt
shaders/: pass_through.vert  simple.frag
